# parallel-block-stm

./: .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt  bench_blocksize.cpp  bench_contention.cpp  bench_scaling.cpp
docs/: experiments.md  index.html
docs/reports/: experiments.md
scripts/: plot_psc.py  plot_results.py  psc_batch_sweep.sh  psc_bench.sh  psc_bench_current.sh  psc_profile.sh  run_benchmarks.sh
src/: blockstm.h  executor.h  mvmemory.h  scheduler.h  sequential.h  transaction.h  workload.h
test/: CMakeLists.txt  test_correctness.cpp  test_mvmemory.cpp  test_parallel.cpp  test_scheduler.cpp
